# repoman-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: install.rs  list.rs  mod.rs  status.rs
src/utils/: git.rs  github.rs  mod.rs
